--- a/Css/auth.css
+++ b/Css/auth.css
@@ -49,7 +49,8 @@ body {
 .welcome-section p {
   margin-bottom: 20px;
   font-size: 0.95rem;
-  opacity: 0.9;
+  opacity: 0.;
+  color: #fff;
 }
 
 .welcome-section button {
