comments added for clarification

--- a/admin/components/header.html
+++ b/admin/components/header.html
@@ -9,10 +9,12 @@
     
       <header class="topbar">
         <div class="topbar-left">
+          <!-- menu icon  -->
           <button class="menu-toggle" id="sidebarToggle" aria-label="Toggle sidebar"><img src="assets/menu_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="menuIcon"></button>
+          <!-- title and subtitle -->
           <div class="page-title-system-title">
-            <h3 class="page-title">Dashboard</h3>
-            <p class="page-sub">University Event Management System</p>
+            <h3 class="page-title"></h3>
+            <p class="page-sub"></p>
           </div>
          
         </div>
